--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,4 +2,5 @@
 <b>Request details:</b>
 <%= @request.details %>
 </p>
+<!-- provding links to edit and to back -->
 <%= link_to 'Edit', edit_patient_request_path(@patient, @request) %> | <%= link_to 'Back', patient_requests_path(@patient) %>
