--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<!-- this class defines what is displayed for each Patient -->
 <p>
   <strong>Name:</strong>
   <%= @patient.Name %>
