--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,19 +1,21 @@
 <%= form_for([@patient, @request]) do |f| %>
 <% if @request.errors.any? %>
-<div id="error_explanation">
-    <h2><%= pluralize(@request.errors.count, "error")%> prohibited this request from being saved:</h2> <ul>
-    <% @request.errors.full_messages.each do |msg| %> <li><%= msg %></li>
+    <div id="error_explanation">
+        <h2><%= pluralize(@request.errors.count, "error")%> prohibited this request from being saved:</h2> 
+        <ul>
+            <% @request.errors.full_messages.each do |msg| %> 
+            <li><%= msg %></li>
+            <% end %>
+        </ul>
+    </div>
 <% end %>
-</ul>
-</div>
-<% end %>
-<div class="field">
-<p>
-<%= f.label :Details %><br />
-<%= f.text_field :details %>
-</p>
-</div>
-<div class="actions">
-<%= f.submit %>
-</div>
+    <div class="field">
+        <p>
+            <%= f.label :Details %><br />
+            <%= f.text_field :details %>
+        </p>
+    </div>
+    <div class="actions">
+        <%= f.submit %>
+    </div>
 <% end %>
