--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,3 +1,4 @@
 <h1>Editing request</h1>
 <%= render 'form' %>
+<!-- provide links to show and to edit -->
 <%= link_to 'Show', patient_request_path(@patient, @request) %> | <%= link_to 'Back', patient_requests_path(@patient) %>
