added admin user
admin@email.ie / password

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -31,13 +31,16 @@
         <td><%= patient.Infection %></td>
         <td><%= patient.Injury %></td>
         <td><%= link_to 'Show', patient %></td>
-        <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
-        <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if current_user.admin? %>
+            <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
+            <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Patient', new_patient_path %>
+<% if user_signed_in? %>
+    <%= link_to 'New Patient', new_patient_path %>
+<% end %>
