--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Profiles</h1>
 
-<table>
+<table class="table table-hover table-striped table-bordered table-responsive">
   <thead>
     <tr>
       <th>Firstname</th>
@@ -20,9 +20,9 @@
         <td><%= profile.lastname %></td>
         <td><%= profile.address %></td>
         <td><%= profile.user %></td>
-        <td><%= link_to 'Show', profile %></td>
-        <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
-        <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', profile, class: "btn btn-default" %></td>
+        <td><%= link_to 'Edit', edit_profile_path(profile), class: "btn btn-default" %></td>
+        <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Profile', new_profile_path %>
+<%= link_to 'New Profile', new_profile_path, class: "btn btn-default" %>
