--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -9,10 +9,10 @@
         </ul>
     </div>
 <% end %>
-    <div class="field">
+    <div class="col-xs-6">
         <p>
             <%= f.label :Details %><br />
-            <%= f.text_field :details %>
+            <%= f.text_field :details, class:"form-control" %>
         </p>
     </div>
     <div class="actions">
