--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', patient: @patient %>
 
-<%= link_to 'Show', @patient %> |
-<%= link_to 'Back', patients_path %>
+<%= link_to 'Show', @patient, class: "btn btn-link" %> |
+<%= link_to 'Back', patients_path, class: "btn btn-link" %>
