--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -8,7 +8,7 @@
     <%= submit_tag "Search" %>
 <% end %>   
 
-<table>
+<table class="table table-hover table-striped">
   <thead>
     <tr>
       <th>Name</th>
@@ -30,10 +30,10 @@
         <td><%= patient.Phone_Number %></td>
         <td><%= patient.Infection %></td>
         <td><%= patient.Injury %></td>
-        <td><%= link_to 'Show', patient %></td>
+        <td><%= link_to 'Show', patient, class: "btn btn-link" %></td>
           <% if current_user.admin? %>
-            <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
-            <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Edit', edit_patient_path(patient), class: "btn btn-link" %></td>
+            <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></td>
           <% end %>
       </tr>
     <% end %>
