--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -20,5 +20,5 @@
   <%= @profile.user %>
 </p>
 
-<%= link_to 'Edit', edit_profile_path(@profile) %> |
-<%= link_to 'Back', profiles_path %>
+<%= link_to 'Edit', edit_profile_path(@profile), class: "btn btn-default" %> 
+<%= link_to 'Back', profiles_path, class: "btn btn-default" %>
