--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -11,37 +11,46 @@
     </div>
   <% end %>
 
-  <div class="form-group">
+  <div class="col-xs-7">
     <%= f.label :Name %>
     <%= f.text_field :Name, class:"form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="col-xs-7">
     <%= f.label :Date_of_Birth %>
     <%= f.text_field :Date_of_Birth, class:"form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="col-xs-7">
     <%= f.label :Address %>
     <%= f.text_field :Address, class:"form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="col-xs-7">
     <%= f.label :Phone_Number %>
     <%= f.text_field :Phone_Number, class:"form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="col-xs-7">
     <%= f.label :Infection %>
     <%= f.text_field :Infection, class:"form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="col-xs-7">
     <%= f.label :Injury %>
     <%= f.text_field :Injury, class:"form-control" %>
+      <br>
+      <br>
   </div>
 
   <div class="actions">
-    <%= f.submit class:"btn btn-primary"%>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <%= f.submit class:"btn btn-default"%>
   </div>
 <% end %>
