--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,34 +1,29 @@
 <p id="notice"><%= notice %></p>
 <!-- this class defines what is displayed for each Patient -->
-<p>
-  <strong>Name:</strong>
-  <%= @patient.Name %>
-</p>
 
-<p>
-  <strong>Date of birth:</strong>
-  <%= @patient.Date_of_Birth %>
-</p>
+<table class="table table-hover table-striped table-bordered table-responsive">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Date of birth</th>
+      <th>Address</th>
+      <th>Phone number</th>
+      <th>Infection</th>
+      <th>Injury</th>
+    </tr>
+  </thead>
 
-<p>
-  <strong>Address:</strong>
-  <%= @patient.Address %>
-</p>
-
-<p>
-  <strong>Phone number:</strong>
-  <%= @patient.Phone_Number %>
-</p>
-
-<p>
-  <strong>Infection:</strong>
-  <%= @patient.Infection %>
-</p>
-
-<p>
-  <strong>Injury:</strong>
-  <%= @patient.Injury %>
-</p>
+  <tbody>
+      <tr>
+        <td><%= @patient.Name %></td>
+        <td><%= @patient.Date_of_Birth %></td>
+        <td><%= @patient.Address %></td>
+        <td><%= @patient.Phone_Number %></td>
+        <td><%= @patient.Infection %></td>
+        <td><%= @patient.Injury %></td>
+      </tr>
+  </tbody>
+</table>
 
 <h2>Requests</h2>
 <% @patient.requests.each do |request| %>
@@ -38,7 +33,10 @@
 </p>
 <% end %>
 
-<%= link_to 'Edit', edit_patient_path(@patient), class: "btn btn-link" %> |
-<%= link_to 'Back', patients_path, class: "btn btn-link" %>
-<%= link_to 'Show Requests', patient_requests_path(@patient), class: "btn btn-link" %>
+<%= link_to 'Edit', edit_patient_path(@patient), class: "btn btn-default" %> 
+<%= link_to 'Back', patients_path, class: "btn btn-default" %>
+<%= link_to 'Show Requests', patient_requests_path(@patient), class: "btn btn-default" %>
+
+
+
 
