--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,33 @@
   <body>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
-      <nav role="navigation">
-    <div class="inner">
-        <a href="#nav" class="nav-collapse" id="nav-collapse">Menu</a>
-        <ul class="nav" id="nav">
-            <li><%= link_to "Home", root_path %></li>
-            <%= render 'devise/menu/registration_items' %>
-            <%= render 'devise/menu/login_items' %>
-        </ul>
-    </div>
-</nav>
+      
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand">Medical App</a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar">
+                    </span>
+                    <span class="icon-bar">
+                    </span>
+                    <span class="icon-bar">
+                    </span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                  <li><%= link_to "Home", root_path %></li>
+                    <li><%= link_to "Profiles", profiles_path %></li>
+                  <%= render 'devise/menu/registration_items' %>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><%= render 'devise/menu/login_items' %>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <%= yield %>
   </body>
