--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Patient</h1>
+<h1>Edit Patient</h1>
 
 <%= render 'form', patient: @patient %>
-
-<%= link_to 'Show', @patient, class: "btn btn-link" %> |
-<%= link_to 'Back', patients_path, class: "btn btn-link" %>
+<br>
+<%= link_to 'Show', @patient, class: "btn btn-default" %> 
+<%= link_to 'Back', patients_path, class: "btn btn-default" %>
