--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -5,10 +5,15 @@
 <!-- http://www.korenlc.com/creating-a-simple-search-in-rails-4/ -->
 <%= form_tag(patients_path, :method => "get", id: "search-form") do %>
     <%= text_field_tag :search, params[:search], placeholder: "Search Names" %>
-    <%= submit_tag "Search" %>
+    <%= submit_tag "Search", class: "btn btn-default"    %>
 <% end %>   
-
-<table class="table table-hover table-striped">
+<br>
+<% if user_signed_in? %>
+<%= link_to 'New Patient', new_patient_path, class: "btn btn-default" %>
+<% end %>
+<br>
+<br>
+<table class="table table-hover table-striped table-bordered table-responsive">
   <thead>
     <tr>
       <th>Name</th>
@@ -30,17 +35,14 @@
         <td><%= patient.Phone_Number %></td>
         <td><%= patient.Infection %></td>
         <td><%= patient.Injury %></td>
-        <td><%= link_to 'Show', patient, class: "btn btn-link" %></td>
+          <td><%= link_to 'Show', patient, class: "btn btn-default" %></td>
           <% if current_user.admin? %>
-            <td><%= link_to 'Edit', edit_patient_path(patient), class: "btn btn-link" %></td>
-            <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></td>
+            <td><%= link_to 'Edit', edit_patient_path(patient), class: "btn btn-default" %></td>
+            <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default" %></td>
           <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-<% if user_signed_in? %>
-    <%= link_to 'New Patient', new_patient_path %>
-<% end %>
+
