--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', patient: @patient %>
 
-<%= link_to 'Back', patients_path, class: "btn btn-link" %>
+<%= link_to 'Back', patients_path, class: "btn btn-default" %>
