--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= profile.firstname %></td>
         <td><%= profile.lastname %></td>
         <td><%= profile.address %></td>
-        <td><%= profile.user %></td>
+        <td><%= profile.user_id %></td>
         <td><%= link_to 'Show', profile, class: "btn btn-default" %></td>
         <% if current_user.admin? %>
             <td><%= link_to 'Edit', edit_profile_path(profile), class: "btn btn-default" %></td>
